# Enclave-LaTrobexCisco

./: .gitignore  camera_node.py  config.py  config.yaml  crowd_flow_codex_prompt.md  dashboard_server.py  ieee_people_count.csv  index.html  multi_camera_manager.py  package-lock.json  package.json  pipeline.py  requirements.txt  test_data_generator.py  tsconfig.app.json  tsconfig.node.json  visualize.py  vite.config.ts
Crowd-density_Heatmap/: .dockerignore  .gitignore  LICENSE  Makefile  README.md  ieee_csv_logger.py  ieee_people_count.csv
Crowd-density_Heatmap/backend/: .env.example  pyproject.toml  requirements.txt
Crowd-density_Heatmap/backend/app/: __init__.py  main.py
Crowd-density_Heatmap/backend/app/api/: analytics.py  camera.py  health.py  location.py  stream.py
Crowd-density_Heatmap/backend/app/core/: __init__.py  config.py  logger.py  settings.py
Crowd-density_Heatmap/backend/app/database/: __init__.py  models.py  schemas.py  session.py
Crowd-density_Heatmap/backend/app/models/: __init__.py  density.py  gaussian.py  heatmap.py  tracker.py  yolo_detector.py
Crowd-density_Heatmap/backend/app/services/: __init__.py  analytics_service.py  camera_service.py  storage_service.py  stream_service.py
Crowd-density_Heatmap/backend/app/utils/: __init__.py  color.py  image.py  math.py
Crowd-density_Heatmap/backend/tests/: conftest.py  test_analytics.py  test_api.py  test_detection.py  test_heatmap.py
data/: camera_calibrations.json  cctv_device_slots.json
public/: eew.html
server/: README.md  package.json  server.js
src/: App.tsx  camera_node.py  (+13 more)
(+61 files in other folders)
