[project]
name = "crowdvision-heatmap-backend"
version = "1.0.0"
description = "AI-powered crowd heatmap microservice (YOLOv11 + ByteTrack + Gaussian KDE)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic
